*****************************************************************************************************
digiKam 2.2.0 - Release date: 2011-10-02

NEW FEATURES:

General : Add image title metadata support.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 155374 : Allow setting Image titles different than image file name [patch].
002 ==> 279581 : Can't compile digiKam with provided libpgf on PowerPC machine (BigEndian).
003 ==> 280540 : Image editor puts saved new versions into the wrong place of the thumbbar.
004 ==> 281801 : Setting TAGs from the menu does not respect "auto tag" setting (set parent).
005 ==> 281790 : Unable to set a tag on multiple selected images (In view mode).
006 ==> 277808 : digiKam crashes while scanning for faces.
007 ==> 279977 : In the facial recognition view, when trying to remove multiple tags, tags outside of the selection are removed but not the entire selection.
008 ==> 277094 : digiKam 2.0 RC won't start.
009 ==> 281767 : digikam 2.1 will not start.
010 ==> 282088 : Missing entries in tag list.
011 ==> 
